Update USASearch URL.

--- a/war/Search.html
+++ b/war/Search.html
@@ -98,7 +98,7 @@
       <div id="main">
         <h2>Search</h2>
         <br />
-        <form id="searchform" method="get" action="http://usasearch.gov/search">
+        <form id="searchform" method="get" action="http://search.usa.gov/search">
           <input type="hidden" name="affiliate" value="WSDOT" />
           <input type="hidden" name="v:project" value="firstgov" />
           <input type="text" name="query" id="query-field" style="width: 290px;" />
