Implement JsonpRequestBuilder for remote AJAX calls.
Using JsonpRequestBuilder also got rid of the IE 7 JavaScript errors.

--- a/war/Search.html
+++ b/war/Search.html
@@ -82,7 +82,7 @@
       <div class="leftnav">
         <div class="leftnavbox">
           <h4 class="header greyBg">Most Requested</h4>
-          <div class="content bluebox">
+          <div class="content">
             <ul>
               <li><a href="http://www.wsdot.wa.gov/traffic/seattle/">Seattle Area Traffic</a></li>
               <li><a href="http://www.wsdot.wa.gov/traffic/passes/snoqualmie/">Snoqualmie Pass</a></li>
